# comtam

./: .clang-format  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  build.sh  main.cpp  test.sh
comtam/: CMakeLists.txt  main.cpp  tensor.cpp  tensor.h
comtam/core/: context.cpp  context.h  device.cpp  device.h  dtype.h  kernel.cpp  kernel.h  ops.h  storage.cpp  storage.h  view.cpp  view.h
comtam/kernels/: binary.metal  matmul.metal  reduction.metal  unary.metal  utils.h
comtam/macros/: log.h  macros.h
comtam/utils/: common.h  cpu_op.h  debug.h  rng.h
docs/: ARCHITECTURE.md  AVOID.md  MAGENETRON.md  MLX_C_ORACLE.md  NOTE.md
docs/course/: APPENDIX.md  BUG_LEDGER.md  INDEX.md  MODULE_0.md  MODULE_1.md  MODULE_2.md  MODULE_3.md  MODULE_4.md  MODULE_5.md  MODULE_6.md  MODULE_7.md  MODULE_8.md  MODULE_9.md  PROJECTS.md
docs/note/: AVOID.md  METAL_USAGE.md
docs/refs/: METAL4.md  MLX.md  MLX_KERNELS.md  MLX_REDUCTION.md
docs/solution/: MODULE_1.md  MODULE_2.md  MODULE_3.md  MODULE_4.md  MODULE_5.md
refs/metal_example/calculate_on_gpu/: README.md
refs/metal_example/calculate_on_gpu/MetalComputeBasic/: MetalAdder.h  MetalAdder.m  add.metal  main.m
refs/metal_example/calculate_on_gpu/MetalComputeBasic.xcodeproj/: project.pbxproj
refs/metal_example/calculate_on_gpu/MetalComputeBasic.xcodeproj/project.xcworkspace/xcuserdata/lenguyen.xcuserdatad/: UserInterfaceState.xcuserstate
refs/metal_example/metal_4/: README.md
refs/metal_example/metal_4/Entry point/: main.m
refs/metal_example/metal_4/ML Encoder.xcodeproj/: project.pbxproj
refs/metal_example/metal_4/Matrix/: Matrix+TensorUtilities.h  Matrix+TensorUtilities.m  Matrix.h  Matrix.m
refs/metal_example/metal_4/Matrix multiplier/: MLMatrixMultiplier+PipelineCompilation.h  MLMatrixMultiplier+PipelineCompilation.m  MLMatrixMultiplier+TensorSetup.h  MLMatrixMultiplier+TensorSetup.m  MLMatrixMultiplier.h  MLMatrixMultiplier.m
refs/metal_example/metal_4/matrix-multiplication.mlpackage/: Manifest.json
refs/metal_example/metal_4/matrix-multiplication.mlpackage/Data/com.apple.CoreML/: model.mlmodel
refs/metal_example/metal_4_2/: .gitignore  README.md
refs/metal_example/metal_4_2/Configuration/: SampleCode.xcconfig
refs/metal_example/metal_4_2/Entry point/: main.m
refs/metal_example/metal_4_2/Matrix/: Matrix+TensorUtilities.h  Matrix+TensorUtilities.m  Matrix.h  Matrix.m
refs/metal_example/metal_4_2/Matrix multiplier/: MatrixMultiplier.h  MatrixMultiplier.m  Shaders.metal
refs/metal_example/metal_4_2/Shader Inline ML.xcodeproj/: project.pbxproj
tests/: CMakeLists.txt  test_module_0.cpp
tests/core/: context.cpp  view.cpp
tests/support/: forward_compare.h  mlx_oracle.h
tests/tensor/: forward.cpp  operations.cpp  v0.cpp
